refactor create shared crendentials
